timeline view fills available vertical space

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,17 @@ body {
   overscroll-behavior-x: none;
 }
 
+html,
+body,
+#root {
+  height: 100%;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
