--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overscroll-behavior-x: none;
+  overscroll-behavior-y: none;
   font-size: 0.92em;
 }
 
