--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   overscroll-behavior-x: none;
   overscroll-behavior-y: none;
-  font-size: 0.92em;
+  font-size: 14px;
 }
 
 html,
