--- a/src/ui/utility.css
+++ b/src/ui/utility.css
@@ -7,6 +7,11 @@
   background: #d3d3d3;
   cursor: pointer;
   white-space: nowrap;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  min-width: 22px;
 }
 
 .utilitySlider {
