work on various things, tabbed side panel

--- a/src/ui/UtilitySlider.css
+++ b/src/ui/UtilitySlider.css
@@ -5,7 +5,7 @@ input:focus {
 
 .utilitySlider {
   appearance: none;
-  background: #d3d3d3;
+  background: var(--control-bg-color);
 }
 .utilitySlider::-webkit-slider-thumb {
   width: 1px;
