--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 14px;
+  /* image-rendering: pixelated; */
+}
+
+:root {
+  --control-bg-color: #d3d3d3;
 }
 
 html,
