--- a/src/ui/utility.css
+++ b/src/ui/utility.css
@@ -5,7 +5,6 @@
   height: 18px;
   border: none;
   background: var(--control-bg-color);
-
   cursor: pointer;
   white-space: nowrap;
   display: flex;
@@ -13,6 +12,10 @@
   align-items: center;
   justify-content: center;
   min-width: 22px;
+}
+
+.utilityButton:active {
+  background-color: var(--control-subtle-highlight);
 }
 
 .utilityButton::not(disabled) {
