more work, TimelinePoint is now TimelineT, use TimelineT for MidiClip dimensions

--- a/src/ui/utility.css
+++ b/src/ui/utility.css
@@ -40,5 +40,8 @@
 }
 
 .utilityInput {
-  border: 2px solid var(--control-bg-color);
+  border: none;
+  background-color: var(--control-bg-color);
+  font-size: 11px;
+  padding: 2px 4px;
 }
