--- a/src/ui/utility.css
+++ b/src/ui/utility.css
@@ -1,30 +1,32 @@
-.utilityButton {
-  font-size: 12px;
-  font-weight: bold;
-  padding: 1px 6px;
-  height: 18px;
-  border: none;
-  background: var(--control-bg-color);
-  cursor: pointer;
-  white-space: nowrap;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  min-width: 22px;
-}
+@layer utilities {
+  .utilityButton {
+    font-size: 12px;
+    font-weight: bold;
+    padding: 1px 6px;
+    height: 18px;
+    border: none;
+    background: var(--control-bg-color);
+    cursor: pointer;
+    white-space: nowrap;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    min-width: 22px;
+  }
 
-.utilityButton:active {
-  background-color: var(--control-subtle-highlight);
-}
+  .utilityButton:active {
+    background-color: var(--control-subtle-highlight);
+  }
 
-.utilityButton::not(disabled) {
-  color: var(--control-text-color);
-}
+  .utilityButton::not(disabled) {
+    color: var(--control-text-color);
+  }
 
-.utilityButtonActive {
-  background: black;
-  color: var(--control-bg-color);
+  .utilityButtonActive {
+    background: black;
+    color: var(--control-bg-color);
+  }
 }
 
 .utilitySlider {
