mute midi clips

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@
   --color-clip-header-selected: #4d8f2a;
   --color-clip-border: #69c33a;
   --color-clip-border-selected: #103310;
+  --color-clip-muted-color: #696969;
   /* timeline */
   --color-timeline-bg: #696969;
   --color-timeline-tick: #595959;
