--- a/src/ui/utility.css
+++ b/src/ui/utility.css
@@ -1,34 +1,31 @@
 @reference "../index.css";
 
-.utilityButton {
-  @apply flex flex-row items-center justify-center
+@layer components {
+  .utilityButton {
+    @apply flex flex-row items-center justify-center
     whitespace-nowrap cursor-pointer
     border-0 font-bold
     bg-control-bg-color active:bg-control-subtle-highlight
     text-[12px] px-[6px] py-px h-[18px] min-w-[22px];
-}
-
-.utilityButton::not(disabled) {
-  /* color: var(--control-text-color); */
-}
-
-.utilityButtonActive {
-  background: black;
-  color: var(--control-bg-color);
-}
-
-.utilitySlider {
-  appearance: none;
-  background: var(--control-bg-color);
-  cursor: ew-resize;
-  &::-webkit-slider-thumb {
-    width: 1px;
-    appearance: none;
-    height: 16px;
-    background: black;
   }
-}
 
-.utilityInput {
-  @apply border-0 bg-control-bg-color text-[11px] px-1 py-[2px];
+  .utilityButtonActive {
+    @apply bg-black text-control-bg-color;
+  }
+
+  .utilitySlider {
+    appearance: none;
+    background: var(--control-bg-color);
+    cursor: ew-resize;
+    &::-webkit-slider-thumb {
+      width: 1px;
+      appearance: none;
+      height: 16px;
+      background: black;
+    }
+  }
+
+  .utilityInput {
+    @apply border-0 bg-control-bg-color text-[11px] px-1 py-[2px];
+  }
 }
